--- a/.github/workflows/goodMorning.yml
+++ b/.github/workflows/goodMorning.yml
@@ -49,8 +49,8 @@ jobs:
       - name: 运行脚本
         run: pnpm start
         env:
-          WX_COMPANY_ID: ${{ secrets.WX_COMPANY_ID }}
-          WX_APP_ID: ${{ secrets.WX_APP_ID }}
-          WX_APP_SECRET: ${{ secrets.WX_APP_SECRET }}
-          TIAN_API_KEY: ${{ secrets.TIAN_API_KEY }}
+          WX_COMPANY_ID: ${{wwb0baf3857b00b383}}
+          WX_APP_ID: ${{1000002}}
+          WX_APP_SECRET: ${{40u_NGpDYar-AZDKrh_Hg-iUj26lZFxqa39XrzQvRnc}}
+          TIAN_API_KEY: ${{dea8511b89699e69e3297baf2e41b566}}
           MESSAGE_TYPE: goodMorning
